--- a/blogweb/templates/account.html
+++ b/blogweb/templates/account.html
@@ -36,7 +36,7 @@
         <div class="pagination">
             <!-- Previous Button -->
             {% if posts.has_prev %}
-            <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=posts.prev_num) }}">Previous</a>
+            <a class="btn btn-outline-info mb-4" href="{{ url_for('account', page=posts.prev_num) }}">Previous</a>
             {% else %}
             <a class="btn btn-outline-info mb-4 disabled" href="#">Previous</a>
             {% endif %}
@@ -45,9 +45,9 @@
             {% for page_num in posts.iter_pages() %}
             {% if page_num %}
                 {% if posts.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+                <a class="btn btn-info mb-4" href="{{ url_for('account', page=page_num) }}">{{ page_num }}</a>
                 {% else %}
-                <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('account', page=page_num) }}">{{ page_num }}</a>
                 {% endif %}
             {% else %}
                 <span class="btn btn-outline-info mb-4 disabled">...</span>
@@ -56,7 +56,7 @@
         
             <!-- Next Button -->
             {% if posts.has_next %}
-            <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=posts.next_num) }}">Next</a>
+            <a class="btn btn-outline-info mb-4" href="{{ url_for('account', page=posts.next_num) }}">Next</a>
             {% else %}
             <a class="btn btn-outline-info mb-4 disabled" href="#">Next</a>
             {% endif %}
