--- a/blogweb/templates/home.html
+++ b/blogweb/templates/home.html
@@ -5,10 +5,10 @@
           <img class="rounded-circle article-img" src="{{url_for('static',filename='profilefile/' + post.author.profile)}}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="{{url_for('account', username=post.author.username)}}">{{ post.author.username }}</a>
+              <a class="mr-2" href="{{url_for('main.account', username=post.author.username)}}">{{ post.author.username }}</a>
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
             </div>
-            <h2><a class="article-title" href="{{ url_for('post',post_id = post.id)}}">{{ post.title }}</a></h2>
+            <h2><a class="article-title" href="{{ url_for('posts.post',post_id = post.id)}}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
           </div>
         </article>
@@ -17,7 +17,7 @@
       <div class="pagination">
         <!-- Previous Button -->
         {% if posts.has_prev %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=posts.prev_num) }}">Previous</a>
+          <a class="btn btn-outline-info mb-4" href="{{ url_for('main.home', page=posts.prev_num) }}">Previous</a>
         {% else %}
           <a class="btn btn-outline-info mb-4 disabled" href="#">Previous</a>
         {% endif %}
@@ -26,9 +26,9 @@
         {% for page_num in posts.iter_pages() %}
           {% if page_num %}
             {% if posts.page == page_num %}
-              <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              <a class="btn btn-info mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
             {% else %}
-              <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              <a class="btn btn-outline-info mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
             {% endif %}
           {% else %}
             <span class="btn btn-outline-info mb-4 disabled">...</span>
@@ -37,7 +37,7 @@
       
         <!-- Next Button -->
         {% if posts.has_next %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=posts.next_num) }}">Next</a>
+          <a class="btn btn-outline-info mb-4" href="{{ url_for('main.home', page=posts.next_num) }}">Next</a>
         {% else %}
           <a class="btn btn-outline-info mb-4 disabled" href="#">Next</a>
         {% endif %}
