--- a/blogweb/templates/layout.html
+++ b/blogweb/templates/layout.html
@@ -29,12 +29,12 @@
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{url_for('home')}}">Home</a>
-                <a class="nav-item nav-link" href="{{url_for('account')}}">Profile</a>
-                <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
+                <a class="nav-item nav-link" href="{{url_for('main.home')}}">Home</a>
+                <a class="nav-item nav-link" href="{{url_for('main.account')}}">Profile</a>
+                <a class="nav-item nav-link" href="{{url_for('account.logout')}}">Logout</a>
                 {% else %}
-                <a class="nav-item nav-link" href="{{url_for('login')}}">Login</a>
-                <a class="nav-item nav-link" href="{{url_for('register')}}">Register</a>
+                <a class="nav-item nav-link" href="{{url_for('account.login')}}">Login</a>
+                <a class="nav-item nav-link" href="{{url_for('account.register')}}">Register</a>
                 {% endif %}
               </div>
             </div>
