--- a/blogweb/templates/post.html
+++ b/blogweb/templates/post.html
@@ -4,7 +4,7 @@
         <img class="rounded-circle article-img" src="{{url_for('static',filename='profilefile/' + post.author.profile)}}">
         <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{{url_for('account', username=post.author.username)}}">{{ post.author.username }}</a>
+            <a class="mr-2" href="{{url_for('main.account', username=post.author.username)}}">{{ post.author.username }}</a>
             <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
         </div>
         <h2><a class="article-title"> {{ post.title }}</a></h2>
@@ -16,8 +16,8 @@
                 <i class="fas fa-ellipsis-v"></i> <!-- Vertical dots icon -->
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="{{ url_for('updatepost', post_id=post.id) }}">Update</a>
-                <form action="{{ url_for('deletepost', post_id=post.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this post?');" style="display: inline;">
+                <a class="dropdown-item" href="{{ url_for('posts.updatepost', post_id=post.id) }}">Update</a>
+                <form action="{{ url_for('posts.deletepost', post_id=post.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this post?');" style="display: inline;">
                     <button type="submit" class="dropdown-item text-danger">Delete</button>
                 </form>
             </div>
